--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DB_PASSWORD=inventory_app
 # Server Configuration
 PORT=5000
 NODE_ENV=development
+NEXT_PUBLIC_STACK_PROJECT_ID=f07a34bb-9716-428b-93e0-5a58ceeb7cfc
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=pck_71d4yvw4k5nd6d9b24ngcrq2wfvc0nyadzmv8wpj3txg8
+STACK_SECRET_SERVER_KEY=ssk_39df3v3cge7vkzdwb2158ssw35kqghn6s6sc2k5535nw0
