--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "build": "cd client && npm run build",
     "install-all": "npm install && cd client && npm install"
   },
-  "keywords": ["inventory", "products", "pricing"],
+  "keywords": [
+    "inventory",
+    "products",
+    "pricing"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "sequelize": "^6.35.2",
+    "multer": "^2.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
 }
-
